# suggestIO

./: .env_template  .flake8  .gitignore  .gitlab-ci.yml  DOCKERFILE  README.md  docker-compose-prod.yaml  docker-compose.yaml  pyproject.toml
.github/: manual.yml
.github/workflows/: manual.yml
nginx/: nginx.conf
suggestio_backend/: manage.py
suggestio_backend/auth/: urls.py  views.py
suggestio_backend/dev/: models.py  urls.py  views.py
suggestio_backend/dev/management/commands/: fill_entities.py
suggestio_backend/dev/migrations/: 0001_initial.py
suggestio_backend/suggestio/: apps.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
suggestio_backend/suggestio/management/commands/: test_encryption.py
suggestio_backend/suggestio/migrations/: 0001_initial.py  0002_alter_spotifyauthdata_user.py  0003_alter_spotifyauthdata_user.py
suggestio_backend/suggestio/spotify_api/: authentication.py  spotify_api.py  suggesion_methods.py
suggestio_backend/suggestio_backend/: asgi.py  settings.py  urls.py  wsgi.py
suggestio_backend/templates/: base.html
suggestio_backend/templates/auth/: login.html  logout.html  register.html
suggestio_backend/templates/dev/: base.html  index.html
suggestio_backend/templates/suggestio/: api_functionality_methods.html  authenticated.html  base.html  create_playlist.html  index.html  spotify_access.html  test.html
yacloud/: docker-compose.yaml  user-data.yaml
